fixed header active link issue on mobile

--- a/static/scss/_filters.scss
+++ b/static/scss/_filters.scss
@@ -14,6 +14,8 @@ $category-nav-right-fixed-lg: $category-nav-right-lg + $container-fluid-padding;
 $category-nav-right-md: $nav-width-md - $container-fluid-padding-mobile - $button-offset-md;
 
 $category-nav-color: transparentize(darken($ultra-light, 0%),.03);
+$category-nav-color: transparentize(darken(white, 0%),.03);
+
 $category-nav-height: 40px;
 $category-menu-width: 220px;
 $category-menu-height: 360px;
