--- a/static/scss/_project.scss
+++ b/static/scss/_project.scss
@@ -192,6 +192,8 @@ $text-project-description: (
 
 	@media screen and (max-width: $sm) {
 		font-size: 13px;
+		padding-left: 7px;
+		padding-right: 7px;
 	}
 
 }
